[#10093]